<resources>
    <string name="app_name">Soap Factory</string>
    <string name="username">Username</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logo">logo</string>
    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="facebook_application_id" translatable="false">2058506360932726</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2058506360932726</string>

    <string-array name="soap_types">
        <item>Bar</item>
        <item>Liquid</item>
        <item>Powder</item>
    </string-array>

    <string-array name="fat_types">
        <item>Animal Fat</item>
        <item>Vegetable Oil</item>
    </string-array>

    <string-array name="scent">
        <item>Almond Butter</item>
        <item>Almond Oil</item>
        <item>Aloe Vera Oil</item>
        <item>Canola Oil</item>
        <item>Coconut Butter</item>
        <item>Coconut Oil</item>
        <item>Mango Butter</item>
        <item>Olive Oil</item>
    </string-array>

    <string-array name="prod_type">
        <item>Choose Product Type</item>
        <item>Oil</item>
        <item>Fat</item>
        <item>Scent</item>
    </string-array>

    <string name="text_size">16</string>


    <string name="admin">carloshencrus08@gmail.com</string>


    <string name="title_activity_recipes">Recipes</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_string_sign_out">Sign @string/sign_out</string>
    <string name="recipes">Recipes</string>
    <string name="scent">Scent</string>
    <string name="fat_type">Fat Type:</string>
    <string name="home_page">Home</string>
    <string name="textview">TextView</string>
    <string name="product_name">Product Name:</string>
    <string name="description">Description</string>
    <string name="prod_name">Product Name</string>
    <string name="product_price">Product Price:</string>
    <string name="price">Price</string>
    <string name="_0_0">0.0</string>
    <string name="product_type">Product Type</string>
    <string name="edtproduct_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="todo">TODO</string>
    <string name="insert">Insert</string>
    <string name="product_registration_image">Product Registration Image</string>
    <string name="register_page">User Registration</string>
    <string name="full_name">Full Name:</string>
    <string name="e_mail">E-mail:</string>

    <string name="password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
